@@ -727,7 +727,7 @@ rb_mod_undef_method(int argc, VALUE *argv, VALUE mod)
 static VALUE
 rb_mod_method_defined(VALUE mod, VALUE mid)
 {
-    ID id = rb_check_id(mid);
+    ID id = rb_check_id(&mid);
     if (!id || !rb_method_boundp(mod, id, 1)) {
 	return Qfalse;
     }
@@ -778,7 +778,7 @@ check_definition(VALUE mod, ID mid, rb_method_flag_t noex)
 static VALUE
 rb_mod_public_method_defined(VALUE mod, VALUE mid)
 {
-    ID id = rb_check_id(mid);
+    ID id = rb_check_id(&mid);
     if (!id) return Qfalse;
     return check_definition(mod, id, NOEX_PUBLIC);
 }
@@ -812,7 +812,7 @@ rb_mod_public_method_defined(VALUE mod, VALUE mid)
 static VALUE
 rb_mod_private_method_defined(VALUE mod, VALUE mid)
 {
-    ID id = rb_check_id(mid);
+    ID id = rb_check_id(&mid);
     if (!id) return Qfalse;
     return check_definition(mod, id, NOEX_PRIVATE);
 }
@@ -846,7 +846,7 @@ rb_mod_private_method_defined(VALUE mod, VALUE mid)
 static VALUE
 rb_mod_protected_method_defined(VALUE mod, VALUE mid)
 {
-    ID id = rb_check_id(mid);
+    ID id = rb_check_id(&mid);
     if (!id) return Qfalse;
     return check_definition(mod, id, NOEX_PROTECTED);
 }
@@ -1259,7 +1259,7 @@ obj_respond_to(int argc, VALUE *argv, VALUE obj)
     ID id;
 
     rb_scan_args(argc, argv, "11", &mid, &priv);
-    if (!(id = rb_check_id(mid)))
+    if (!(id = rb_check_id(&mid)))
 	return Qfalse;
     if (basic_obj_respond_to(obj, id, !RTEST(priv)))
 	return Qtrue;
